<resources>
    <string name="app_name">Parachute</string>
    <string name="title_activity_login">Activity_Login</string>
    <string name="title_activity_mine">Activity_Mine</string>
    <string name="title_activity_mine_parachute">Activity_Mine_Parachute</string>
    <string name="title_activity_mine_receive_task">Activity_Mine_Receive_Task</string>
    <string name="title_activity_mine_publish_task">Activity_Mine_Publish_Task</string>
    <string name="title_activity_mine_publish_task_list">Activity_Mine_Publish_Task_List</string>
    <string name="title_activity_setting">Activity_Setting</string>
    <string name="title_activity_throw_in_parachute">Activity_Throw_In_Parachute</string>
    <string name="title_activity_take_order">Activity_Take_Order</string>
    <string name="title_activity_take_orders">Activity_Take_Orders</string>
    <string name="title_activity_pick_num">Activity_Pick_Num</string>
    <string name="title_activity_pay">Activity_Pay</string>

    <string name="mine_orders">订单</string>
    <string name="mine_account">我的账户</string>


    <!--我投的伞-->
    <string name="message_tips">收到</string>


    <string name="activity_main_release_task_text">发布任务</string>
    <string name="activity_main_title_text">伞来了</string>
    <string name="activity_main_exit_text">再按一次退出程序</string>
    <!-- 版本更新 -->
    <string name="latest_version_title">发现新版本(%1$s)</string>
    <string name="update_latest_version_title">最新版本(%1$s), 更新&#8230;</string>
    <string name="download_failure">安装最新版本失败 !</string>
    <string name="later_update_tip">更新&#8230; (请在开启wifi的时候更新)</string>
    <string name="is_latest_version_label">您的APP是最新版本</string>
    <!-- 登陆页面 -->
    <string name="activity_mine_login_close_title">关闭</string>
    <string name="activity_mine_title">登陆</string>
    <string name="activity_mine_register_title">注册</string>
    <string name="activity_mine_username_hint">用户名/邮箱地址</string>
    <string name="activity_mine_password_hint">密码</string>
    <string name="activity_mine_forget_password">忘记密码？</string>
    <string name="activity_mine_weixin_login">微信登陆</string>
    <string name="activity_mine_facebook_login">Facebook登录</string>

    <!-- 上传照片 -->
    <string name="takepicture">拍照</string>
    <string name="take_from_album">从相册中选取</string>
    <string name="cancle">取消</string>
    <string name="camera_unavailable">相机不可用</string>

    <!--我的页面-->
    <string name="go_back">返回</string>
    <string name="mine_title">我的</string>
    <string name="mine_publish_task">我发布的任务</string>
    <string name="mine_receive_task">我接受的任务</string>
    <string name="mine_message">用户消息</string>
    <string name="mine_feedback">意见反馈</string>
    <string name="mine_info">个人信息</string>
    <string name="mine_log_out">退出登录</string>

    <!--我发布的任务-->
    <string name="charging_forward">待付款</string>
    <string name="receiving_forward">待接收</string>
    <string name="executing_forward">待执行</string>
    <string name="confirming_forward">待确认</string>
    <string name="finished">已完成</string>
    <string name="canceled">已取消</string>

    <string name="charging_forward_more">更多待付款</string>
    <string name="receiving_forward_more">更多待接收</string>
    <string name="executing_forward_more">更多待执行</string>
    <string name="confirming_forward_more">更多待确认</string>
    <string name="finished_more">更多已完成</string>
    <string name="canceled_more">更多已取消</string>

    <!--我的降落伞-->
    <string name="mine_parachute">我的降落伞</string>
    <!--支付-->
    <string name="pay">支付</string>
    <!--投放降落伞-->
    <string name="throw_in_parachute">投放降落伞</string>
    <string name="landing_site">投放地点</string>
    <string name="landing_time">降落时间</string>
    <string name="invalid_time">失效时间</string>
    <string name="task_receiveNum">接收人数</string>
    <string name="task_taskNum">图片数量</string>
    <string name="parachute_type">类型</string>
    <string name="task_denomination">人均报酬</string>
    <string name="others">任务要求</string>
    <string name="public_parachute">公开</string>
    <string name="task_illustrator">任务说明</string>
    <string name="cancle_str">取消</string>
    <string name="confirm_str">确认</string>
    <!--接单-->
    <string name="take_order_title">接单</string>
    <string name="in_hand_location">定位中...</string>
    <string name="upload_Str">数据提交中...</string>
    <string name="error_hand">噢，网络不给力</string>
    <string name="in_hand">努力加载中...</string>

    <!--支付-->
    <string name="weixin_pay">微信支付</string>
    <string name="paypal_pay">Paypal支付</string>
    <string name="cancel_str">取消</string>

    <!--设置-->
    <string name="setting_str">设置</string>
    <string name="receive_distance">接受距离</string>
    <string name="recommended_app">推荐APP</string>
    <string name="use_terms">使用条款</string>
    <!--<string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>-->
    <!--<string name="pickerview_year"></string>
    <string name="pickerview_month"></string>
    <string name="pickerview_day"></string>
    <string name="pickerview_hours"></string>
    <string name="pickerview_minutes"></string>
    <string name="pickerview_seconds"></string>-->
    <!-- <string name="activity_mine_money">零钱</string>

    <string name="app_name">Parachute</string>
    <string name="title_activity_login">Activity_Login</string>
    <string name="title_activity_mine">Activity_Mine</string>
    <string name="title_activity_mine_parachute">Activity_Mine_Parachute</string>
    <string name="title_activity_mine_receive_task">Activity_Mine_Receive_Task</string>
    <string name="title_activity_mine_publish_task">Activity_Mine_Publish_Task</string>
    <string name="title_activity_mine_publish_task_list">Activity_Mine_Publish_Task_List</string>
    <string name="title_activity_setting">Activity_Setting</string>
    <string name="title_activity_throw_in_parachute">Activity_Throw_In_Parachute</string>
    <string name="title_activity_take_order">Activity_Take_Order</string>
    <string name="title_activity_take_orders">Activity_Take_Orders</string>
    <string name="title_activity_pick_num">Activity_Pick_Num</string>
    <string name="title_activity_pay">Activity_Pay</string>
    <string name="title_activity_mine_UpLoadImage_PopuWindow">UpLoadImage_PopuWindow</string>-->
</resources>
