<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearlayout_popupwindow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/uploadimage_background_color"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_camer_popupwindow"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/takepicture"
                android:textColor="#003399"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_album_popupwindow"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="1dp"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/take_from_album"
                android:textColor="#003399"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_cancel_popupwindow"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/cancle"
            android:textColor="#003399"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>