<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_48dp"
                android:background="@color/header_color">

                <TextView
                    android:id="@+id/txt_cancel"
                    android:layout_width="40dp"
                    android:layout_marginLeft="12dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/cancel_str"
                    android:textColor="#cc0000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/pay"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="1dp"
                android:background="@color/image_divide_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="12dp"
                    android:text="支付金额："
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_remuneration"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="¥ 1.00"
                    android:textColor="#cc0000"
                    android:textSize="25sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="1dp"
                android:background="@color/image_divide_color" />

            <LinearLayout
                android:id="@+id/weixin_pay_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp">

                <ImageView
                    android:layout_width="@dimen/height_48dp"
                    android:layout_height="@dimen/height_48dp"
                    android:src="@mipmap/weixin_64" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/weixin_pay"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:src="@mipmap/arrow" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="1dp"
                android:background="@color/image_divide_color" />

            <LinearLayout
                android:id="@+id/paypal_pay_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12dp">

                <ImageView
                    android:layout_width="@dimen/height_48dp"
                    android:layout_height="@dimen/height_48dp"
                    android:src="@mipmap/paypal_64" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/paypal_pay"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:src="@mipmap/arrow" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="1dp"
                android:background="@color/image_divide_color" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
